gps gifts API works well for GET and POST
